[package]
name = "pixelstratwar_backend"
version = "0.1.0"
edition = "2021"

# Dependencies
[dependencies]
actix-web = "4.0"
actix-web-actors = "4.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
env_logger = "0.11.5"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]