[package]
name = "pixelstratwar"
version = "0.1.0"
edition = "2021"

# Dependencies
[dependencies]
actix-web = "4.0"
actix-web-actors = "4.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
redis = { version = "0.25", features = ["tokio-comp"] }
serde_json = "1.0"
env_logger = "0.11.5"
actix = "0.13.5"
log = "0.4.22"
bytes = "1.9.0"
base62 = "2.0.3"
actix-cors = "0.7.0"
actix-web-httpauth = "0.8.2"
futures = "0.3.31"
rand = "0.8.5"
redis-test = "0.6.0"
async-trait = "0.1.83"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[package.metadata.cargo-shear]
ignored = ["log"]
